@@ -30,6 +30,7 @@ Small features:
   * New environment variables STARPU_BUS_STATS_FILE and
     STARPU_WORKER_STATS_FILE to specify files in which to display
     statistics about data transfers and workers.
+  * Add starpu_bcsr_filter_block filtering function.
 
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
